--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog",
   "version": "0.0.0",
   "scripts": {
+    "prebuild": "node ./byli-cms.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -10,16 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.1.4",
+    "@angular/cdk": "^16.1.4",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.4",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "gray-matter": "^4.0.3",
+    "material-design-icons": "^3.0.1",
+    "ngx-markdown": "^16.0.0",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
+    "sharp": "^0.32.1",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -33,6 +42,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
   }
 }
