--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "gray-matter": "^4.0.3",
+    "immutable": "^4.3.1",
     "material-design-icons": "^3.0.1",
     "ngx-markdown": "^16.0.0",
     "prismjs": "^1.29.0",
