--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/icon.png",
               "src/assets",
               "src/robots.txt",
               "src/sitemap.xml"
