--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gray-matter": "^4.0.3",
     "immutable": "^4.3.1",
     "material-design-icons": "^3.0.1",
+    "material-theme-creator": "^3.2.1",
     "ngx-markdown": "^16.0.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
