--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@angular/animations": "^16.1.4",
     "@angular/cdk": "^16.1.4",
+    "@angular/cli": "^18.1.1",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -26,30 +27,15 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "gray-matter": "^4.0.3",
+    "gumshoejs": "^5.1.2",
     "immutable": "^4.3.1",
     "material-design-icons": "^3.0.1",
-    "material-theme-creator": "^3.2.1",
     "ngx-markdown": "^16.0.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "sharp": "^0.32.1",
-    "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "xmlbuilder2": "^3.1.1",
     "zone.js": "~0.13.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "~16.1.4",
-    "@angular/compiler-cli": "^16.1.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.1.3"
   }
 }
