--- a/package.json
+++ b/package.json
@@ -15,27 +15,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.12",
-    "@angular/cdk": "^16.1.4",
+    "@angular/animations": "^18.1.1",
+    "@angular/cdk": "^18.1.1",
     "@angular/cli": "^18.1.1",
-    "@angular/common": "^17.3.12",
-    "@angular/compiler": "^17.3.12",
-    "@angular/core": "^17.3.12",
-    "@angular/forms": "^17.3.12",
-    "@angular/material": "^16.1.4",
-    "@angular/platform-browser": "^17.3.12",
-    "@angular/platform-browser-dynamic": "^17.3.12",
-    "@angular/router": "^17.3.12",
+    "@angular/common": "^18.1.1",
+    "@angular/compiler": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/material": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
     "gray-matter": "^4.0.3",
     "gumshoejs": "^5.1.2",
     "immutable": "^4.3.1",
     "material-design-icons": "^3.0.1",
-    "ngx-markdown": "^16.0.0",
+    "ngx-markdown": "^18.0.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "sharp": "^0.32.1",
     "uuid": "^9.0.0",
     "xmlbuilder2": "^3.1.1",
     "zone.js": "~0.14.8"
+  },
+  "devDependencies": {
+    "@angular-builders/custom-webpack": "^18.0.0"
   }
 }
