--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^18.1.1",
     "@angular/platform-browser-dynamic": "^18.1.1",
     "@angular/router": "^18.1.1",
+    "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.3",
     "gumshoejs": "^5.1.2",
     "immutable": "^4.3.1",
