--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^18.0.0"
+  },
+  "engines": {
+    "node": ">=18.19.1"
   }
 }
