--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
     "node": ">=18.19.1"
   },
   "scripts": {
-    "prebuild": "node ./byli-cms.js",
+    "prebuild": "node ./node_modules/byli/.dist/init.js refresh",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -36,7 +36,8 @@
     "sharp": "^0.33.4",
     "uuid": "^9.0.0",
     "xmlbuilder2": "^3.1.1",
-    "zone.js": "~0.14.8"
+    "zone.js": "~0.14.8",
+    "byli": "1.0.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^18.0.0"
