--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser": "^18.1.1",
     "@angular/platform-browser-dynamic": "^18.1.1",
     "@angular/router": "^18.1.1",
+    "@babel/runtime": "^7.26.0",
+    "byli": "1.0.4",
     "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.3",
     "gumshoejs": "^5.1.2",
@@ -36,8 +38,7 @@
     "sharp": "^0.33.4",
     "uuid": "^9.0.0",
     "xmlbuilder2": "^3.1.1",
-    "zone.js": "~0.14.8",
-    "byli": "1.0.4"
+    "zone.js": "~0.14.8"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^18.0.0"
